--- a/PhanVanMai/Chỉ Đạo Điều Hành PVM.html
+++ b/PhanVanMai/Chỉ Đạo Điều Hành PVM.html
@@ -184,7 +184,7 @@
   }
 
   .cadre-table-scroll::-moz-scrollbar {
-    width: 6px;
+    width: 3px;
   }
 
   .cadre-table-scroll::-moz-scrollbar-thumb {
@@ -217,6 +217,14 @@
     margin-left: 11%;
     padding: 0 6px 0 16px;
   }
+  .wrapper-down-cddh > td > a {
+    text-decoration: none;
+    color: #2e2e2e;
+  }
+  .wrapper-down-cddh > td > a:hover {
+    color: #0d4c92;
+    font-weight: bold;
+  }
 </style>
 <div class="position-relative w-100">
   <div class="box1 w-100 box-shadow-main">
@@ -244,11 +252,24 @@
                   Thành phố Hồ Chí Minh
                 </td>
                 <td class="text-center">
-                  <img src="/documents/39403/1077501/dow_chidao.png" />&nbsp;
-                  Tải về
+                  <a
+                    href="/path/to/your/file.pdf"
+                    target="_blank"
+                    style="
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                    "
+                  >
+                    <img
+                      src="/documents/39403/1077501/dow_chidao.png"
+                      class="mr-2"
+                    />
+                    <span>Tải về</span>
+                  </a>
                 </td>
               </tr>
-              <tr>
+              <tr class="wrapper-down-cddh">
                 <td class="text-left">Số: 78/2024/QĐ-UBND</td>
                 <td class="text-center">21/10/2024</td>
                 <td class="text-left">
@@ -256,8 +277,21 @@
                   Hồ Chí Minh
                 </td>
                 <td class="text-center">
-                  <img src="/documents/39403/1077501/dow_chidao.png" />&nbsp;
-                  Tải về
+                  <a
+                    href="/path/to/your/file.pdf"
+                    target="_blank"
+                    style="
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                    "
+                  >
+                    <img
+                      src="/documents/39403/1077501/dow_chidao.png"
+                      class="mr-2"
+                    />
+                    <span>Tải về</span>
+                  </a>
                 </td>
               </tr>
               <tr>
@@ -268,8 +302,21 @@
                   Chánh
                 </td>
                 <td class="text-center">
-                  <img src="/documents/39403/1077501/dow_chidao.png" />
-                  &nbsp;Tải về
+                  <a
+                    href="/path/to/your/file.pdf"
+                    target="_blank"
+                    style="
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                    "
+                  >
+                    <img
+                      src="/documents/39403/1077501/dow_chidao.png"
+                      class="mr-2"
+                    />
+                    <span>Tải về</span>
+                  </a>
                 </td>
               </tr>
               <tr>
@@ -280,8 +327,21 @@
                   triển chính thức của các cơ quan, tổ chức, cá nhân nước ngoài
                 </td>
                 <td class="text-center">
-                  <img src="/documents/39403/1077501/dow_chidao.png" />&nbsp;
-                  Tải về
+                  <a
+                    href="/path/to/your/file.pdf"
+                    target="_blank"
+                    style="
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                    "
+                  >
+                    <img
+                      src="/documents/39403/1077501/dow_chidao.png"
+                      class="mr-2"
+                    />
+                    <span>Tải về</span>
+                  </a>
                 </td>
               </tr>
             </tbody>
