--- a/PhanVanMai/Chủ Tịch PVM Banner.html
+++ b/PhanVanMai/Chủ Tịch PVM Banner.html
@@ -200,6 +200,18 @@
     .profile-right-pct {
       padding: 0;
     }
+    .mr-15pt {
+      margin-right: 5%;
+    }
+    .ml-15pt {
+      margin-left: 5%;
+    }
+    .content-cddh-ct {
+      margin-left: 3% !important;
+    }
+    .content-ltcd {
+      padding-right: 4% !important;
+    }
   }
 
   @media screen and (min-width: 1025px) and (max-width: 1324px) {
@@ -236,64 +248,85 @@
       margin-right: 1%;
     }
     .content-cddh-ct {
-      margin-left: 1% !important;
+      margin-left: 3% !important;
     }
     .content-ltcd {
-      padding-right: 1% !important;
+      padding-right: 4% !important;
     }
     .banner-cd-pvm {
       padding-top: 7% !important;
     }
+    .wrapper-anh-video-pvm {
+      margin-right: 0;
+    }
+    .wrapper-gioi-thieu-ct {
+      padding-top: 47px;
+    }
   }
   @media screen and (min-width: 1325px) and (max-width: 1440px) {
     .ml-15pt {
-      margin-left: 9%;
+      margin-left: 10.4%;
     }
     .mr-15pt {
-      margin-right: 11%;
+      margin-right: 12.5%;
     }
     .content-cddh-ct {
-      margin-left: 8% !important;
+      margin-left: 9.4% !important;
     }
     .content-ltcd {
-      padding-right: 16% !important;
+      padding-right: 21.5% !important;
     }
     .banner-cd-pvm {
       padding-top: 1% !important;
     }
+    .wrapper-gioi-thieu-ct {
+      padding-top: 47px;
+    }
+    .wrapper-anh-video-pvm {
+      margin-right: 1.1%;
+    }
   }
   @media screen and (min-width: 1441px) and (max-width: 1824px) {
+    .wrapper-gioi-thieu-ct {
+      padding-top: 47px;
+    }
     .ml-15pt {
       margin-left: 16%;
     }
     .mr-15pt {
-      margin-right: 18%;
+      margin-right: 17.5%;
     }
     .content-cddh-ct {
       margin-left: 13% !important;
     }
     .content-ltcd {
-      padding-right: 26% !important;
+      padding-right: 28% !important;
     }
     .banner-cd-pvm {
       padding-top: 1% !important;
     }
+    .wrapper-anh-video-pvm {
+      margin-right: 1%;
+    }
   }
   @media screen and (min-width: 1825px) and (max-width: 2304px) {
     .ml-15pt {
-      margin-left: 19%;
+      margin-left: 21.2%;
     }
     .mr-15pt {
-      margin-right: 20%;
+      margin-right: 22.5%;
     }
     .content-cddh-ct {
-      margin-left: 15% !important;
+      margin-left: 16.7% !important;
     }
     .content-ltcd {
-      padding-right: 29% !important;
+      padding-right: 33% !important;
     }
     .banner-cd-pvm {
-      padding-top: 10% !important;
+      height: 308px !important;
+    }
+    .wrapper-anh-video-pvm {
+      margin-right: 1%;
     }
   }
   @media screen and (min-width: 2305px) {
@@ -307,7 +340,13 @@
       margin-left: 27% !important;
     }
     .content-ltcd {
-      padding-right: 54% !important;
+      padding-right: 56% !important;
+    }
+    .banner-cd-pvm {
+      height: 308px;
+    }
+    .wrapper-anh-video-pvm {
+      margin-right: 1%;
     }
     .banner-cd-pvm {
       padding-top: 10% !important;
@@ -316,7 +355,7 @@
 </style>
 <div class="profile-container-pct">
   <div class="ml-15pt">
-    <div class="row m-0 box-shadow-left-15pt">
+    <div class="row m-0 box-shadow-left-15pt wrapper-gioi-thieu-ct">
       <div class="d-none d-md-block col-12 col-md-12 pt-0 pt-md-5">
         <div class="profile-left-pct pr-0">
           <div class="profile-title-pct">
