update ngày 17/12 thứ 3

--- a/tintuc-sukien/Tin Tức Sự Kiện - Quận Huyện.html
+++ b/tintuc-sukien/Tin Tức Sự Kiện - Quận Huyện.html
@@ -1,5 +1,5 @@
 
-<div class="news-category-section pt-5 pb-4">
+<div class="news-category-section pt-0-mobile pt-5 pb-4">
     <div class="row">
         <!-- Cột tin tức ngành -->
         <div class="col-lg-12 col-12">
