--- a/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Slide HOẠT ĐỘNG CỦA LÃNH ĐẠO TP.html
+++ b/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Slide HOẠT ĐỘNG CỦA LÃNH ĐẠO TP.html
@@ -1,4 +1,3 @@
-
 <div class="category-news-container">
     <div>
         <div class="category-menu">
@@ -69,7 +68,7 @@
             "HA_TANG": "/documents/39403/331149/ic_ht.png/efcf15fa-7c8d-0461-3095-831796a669d8?t=1732155565437",
             "VAN_HOA": "/documents/39403/331149/ic_vh.png/05543994-41a5-e16e-89b9-cee9a415e8f1?t=1732155566178",
             "KHOA_GIAO":"/documents/39403/331149/khoa+gi%C3%A1o.png/100f8139-6dbd-6b6a-b441-0e51259b0807?t=1732155566411",
-            "DOI_NGOAI": "/documents/39403/331149/%C4%91%E1%BB%91i+ngo%E1%BA%A1i.png/e9278b95-d550-abbb-7a3c-bc0e6c7145bf?t=1732155565214",
+            "DOI_NGOAI": "/documents/39403/331149/ic_hdld.png/be3c1e71-1ec8-7435-0ca3-6c54c099131a?t=1734416957414",
             "CHINH_TRI": "/documents/39403/331149/CH%C3%8DNH+TR%E1%BB%8A.png/aff1039f-cafc-1121-e49f-210645a54730?t=1732155564962",
             "BUSINESS": "/documents/39403/331149/BUSINESS.png/8e06bae4-1c7e-aec4-c6b0-291439f12207?t=1732155564731",
             "AN_NINH":"/documents/39403/331149/AN+NINH+TRAT+TU.png/adb2dc88-bb80-b5fe-c14a-c9f3b3b1e15e?t=1732155564481"
@@ -118,7 +117,7 @@
                             <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
                                 <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
                             <#else>
-                                <#assign smallImageUrl = "" >
+                                <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" >
                             </#if>
                             <swiper-slide
                             ><div class="card position-relative mb-5">
