--- a/tintuc-sukien/2011_TinTucSuKien_TinMoi.html
+++ b/tintuc-sukien/2011_TinTucSuKien_TinMoi.html
@@ -1,5 +1,4 @@
 <style>
-
     .news-new-container{
         padding-right: 15px;
         padding-left: 15px;
@@ -79,43 +78,108 @@
         font-weight: normal;
     }
 
+    @media screen and (max-width: 426px) {
+        .list-group-item {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 5px;
+            position: relative;
+        }
+        .list-group-item > div { /*Direct child of list-group-item*/
+            display: flex;
+            align-items: center;
+        }
 
-@media screen and (max-width: 426px) {
-    .news-new-container .list-group-item {
-        display: flex;
-        flex-direction: column; 
-        align-items: flex-start;
-        gap: 10px; 
+
+        .news-number-minh {
+            font-size: 12px;
+            width: 24px;
+            height: 20px;
+            padding: 0 5px;
+             margin-right: 5px;
+        }
+
+        .news-time {
+            font-size: 12px;
+            white-space: nowrap;
+            position: absolute;
+        top: 8px;
+        left: 44px;
+        }
+
+        .news-title-ttsk {
+            font-size: 12px;
+            max-width: 100%;
+            white-space: normal;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            position: absolute;
+        top: 27px;
+        left: 44px;
+        max-width: 313px !important;
+        }
+        .view-count-container {
+          font-size: 12px;
+          gap: 3px;
+          margin-left: auto; /* Push to the right */
+          position: absolute;
+        top: 27px;
+        right: 0;
+        }
+
     }
 
-    .news-number-minh {
-        font-size: 14px;
-        width: 28px;
-        height: 24px;
-        padding: 0 6px;
+
+    @media screen and (min-width: 427px) and (max-width: 768px) {
+        .list-group-item {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+             gap: 5px;
+        }
+        .list-group-item > div { /*Direct child of list-group-item*/
+            display: flex;
+            align-items: center;
+        }
+
+        .news-number-minh {
+            font-size: 14px;
+            width: 28px;
+            height: 24px;
+            margin-right: 5px;
+        }
+
+        .news-time {
+            font-size: 12px;
+            white-space: nowrap;
+            position: absolute;
+        top: 8px;
+        left: 44px;
+        }
+        .news-title-ttsk {
+            font-size: 14px;
+            max-width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            position: absolute;
+        top: 27px;
+        left: 44px;
+        max-width: 77% !important;
+        }
+
+       .view-count-container {
+            font-size: 12px;
+            gap: 5px;
+            margin-left: auto; /* Push to the right */
+            position: absolute;
+        top: 27px;
+        right: 0;
+        }
     }
 
-    .news-time {
-        font-size: 12px; 
-    }
-
-    .news-title-ttsk {
-        font-size: 14px;
-        max-width: 100%; 
-        white-space: normal;
-        overflow: visible; 
-    }
-
-    .view-count-container {
-        font-size: 12px;
-        gap: 5px;
-    }
-    .list-group-item .news-title-ttsk{
-        max-width: 130px;
-    }
-}
-
-    @media screen and (min-width: 768px) and (max-width: 1024px) {
+    @media screen and (min-width: 769px) and (max-width: 1024px) {
         .list-group-item .news-title-ttsk {
             max-width: 426px;
         }
@@ -147,45 +211,47 @@
         <#assign indexLocal = 0/>
         <#if entries?has_content>
             <#list entries as curEntry>
-                <#assign
-                renderer = curEntry.getAssetRenderer()
-                className = renderer.getClassName() />
-                <#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal &lt; 5>
-                    <#assign
-                    title = curEntry.getTitle(locale)
-                    article = renderer.getArticle()
-                    description = article.getDescription(locale)
-                    ddmTemplateKey = article.getDDMTemplateKey()
-                    createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
-                    createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
-                    createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
-                    createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
-                    curEntry = curEntry
-                        viewCout = curEntry.getViewCount()
-                    viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
-                    indexLocal = indexLocal + 1 />
+				<#if  curEntry?? && curEntry.getAssetRenderer()?exists>
+					<#assign
+					renderer = curEntry.getAssetRenderer()
+					className = renderer.getClassName() />
+					<#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal < 5>
+						<#assign
+						title = curEntry.getTitle(locale)
+						article = renderer.getArticle()
+						description = article.getDescription(locale)
+						ddmTemplateKey = article.getDDMTemplateKey()
+						createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
+						createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
+						createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
+						createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
+						curEntry = curEntry
+							viewCout = curEntry.getViewCount()
+						viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+						indexLocal = indexLocal + 1 />
 
-                    <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
-                        <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
-                    <#else>
-                        <#assign smallImageUrl = "" >
-                    </#if>
+						<#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
+							<#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
+						<#else>
+							<#assign smallImageUrl = "" >
+						</#if>
 
-                    <div class="list-group-item border-0 px-0 mt-2">
-                        <div class="d-flex align-items-center gap-3">
-                            <div class="news-number-minh active-news">${indexLocal}</div>
-                            <div class="news-time">${createTime} | ${createDay}/${createMonth}/${createYear}</div>
-                            <div class="flex-grow-1">
-                                <a href="${viewURL}" class="news-title-ttsk">${title}</a>
-                            </div>
-                            <div class="d-flex align-items-center gap-1 view-count-container">
-                                <i class="fa fa-eye"></i>
-                                <span class="news-views">${viewCout}</span>
-                            </div>
-                        </div>
-                    </div>
+						<div class="list-group-item border-0 px-0 mt-2">
+							<div class="d-flex align-items-center gap-3">
+								<div class="news-number-minh active-news">${indexLocal}</div>
+								<div class="news-time">${createTime} | ${createDay}/${createMonth}/${createYear}</div>
+								<div class="flex-grow-1">
+									<a href="${viewURL}" class="news-title-ttsk">${title}</a>
+								</div>
+								<div class="d-flex align-items-center gap-1 view-count-container">
+									<i class="fa fa-eye"></i>
+									<span class="news-views">${viewCout}</span>
+								</div>
+							</div>
+						</div>
 
-                </#if>
+					</#if>
+				</#if>
             </#list>
         </#if>
     </div>
