--- a/ChiTietBaiViet/Chi tiết bài viết_fix.html
+++ b/ChiTietBaiViet/Chi tiết bài viết_fix.html
@@ -1229,7 +1229,7 @@ images_folder = theme_display.getPathThemeImages()
                                             <#elseif SmallImageID ?? && SmallImageID != 0>
                                                 <#assign smallImageUrl = "/image/journal/article?img_id=${SmallImageID}">
                                             <#else>
-                                                <#assign smallImageUrl = "https://congthongtin-eng.qtsc.com.vn/documents/60205/77945/no-image.jpg/e9f6989a-ae19-74fb-5701-1069f7823edb?t=1691030280750" >
+                                                <#assign smallImageUrl = "/documents/60205/77945/no-image.jpg" >
                                             </#if>
                                             <#if indexLocal  == 0>
                                                 <div class="col-12 d-flex p-0 mb-16" idx="${indexLocal+1}" style="height: 100% !important;">
