--- a/PhanVanMai/Chỉ Đạo Chủ Tịch PVM.html
+++ b/PhanVanMai/Chỉ Đạo Chủ Tịch PVM.html
@@ -9,7 +9,7 @@
     <div class="row m-0">
         <div class="baner-content col-12 col-md-12 pb-0 banner-cd-pvm row m-0">
             <!-- Giới thiệu Chỉ đạo -->
-            <div class="profile-right-pct col-12 pt-0">
+            <div class="profile-right-pct col-12 pt-0  pb-0">
                 <div class="activities-header-pct">
                     <div class="activities-icon-pct">
                         <div class="icon-wrapper-pct">
