--- a/PhanVanMai/Hoạt Động Chủ Tịch PVM.html
+++ b/PhanVanMai/Hoạt Động Chủ Tịch PVM.html
@@ -56,9 +56,9 @@
                                             src="/documents/58202/1035722/dot.png"
                                             alt=""
                                     />
-                                    <p class="activity-item-text-pct" onclick="location.href='${viewURL}'">
+                                    <a class="activity-item-text-pct" href="${viewURL}">
                                         ${title}
-                                    </p>
+                                    </a>
                                 </div>
                             </#if>
                         </#list>
