--- a/tintuc-sukien/2011_TinTucSuKien_TinMoi.html
+++ b/tintuc-sukien/2011_TinTucSuKien_TinMoi.html
@@ -117,7 +117,7 @@
             position: absolute;
         top: 27px;
         left: 44px;
-        max-width: 313px !important;
+        max-width: 75% !important;
         }
         .view-count-container {
           font-size: 12px;
