--- a/PhanVanMai/Chủ Tịch PVM Banner.html
+++ b/PhanVanMai/Chủ Tịch PVM Banner.html
@@ -274,7 +274,8 @@
       margin-left: 9.4% !important;
     }
     .content-ltcd {
-      padding-right: 21.5% !important;
+      margin-right: 22%;
+      padding: 0 12px 0 6px;
     }
     .banner-cd-pvm {
       padding-top: 1% !important;
@@ -297,10 +298,11 @@
       margin-right: 17.5%;
     }
     .content-cddh-ct {
-      margin-left: 13% !important;
+      margin-left: 13.5% !important;
     }
     .content-ltcd {
-      padding-right: 28% !important;
+      margin-right: 29%;
+      padding: 0 12px 0 2px;
     }
     .banner-cd-pvm {
       padding-top: 1% !important;
@@ -309,32 +311,60 @@
       margin-right: 1%;
     }
   }
-  @media screen and (min-width: 1825px) and (max-width: 2304px) {
+  @media screen and (min-width: 1825px) and (max-width: 1919px) {
     .ml-15pt {
-      margin-left: 21.2%;
+      margin-left: 18.5%;
     }
     .mr-15pt {
-      margin-right: 22.5%;
+      margin-right: 20.5%;
     }
     .content-cddh-ct {
-      margin-left: 16.7% !important;
+      margin-left: 18.9% !important;
     }
     .content-ltcd {
-      padding-right: 33% !important;
+      margin-right: 27%;
+      padding: 0 12px 0 2px;
     }
     .banner-cd-pvm {
       height: 308px !important;
     }
     .wrapper-anh-video-pvm {
-      margin-right: 1%;
+      margin-right: 0.7%;
+    }
+    .profile-left-pct {
+      padding-top: 6%;
+    }
+  }
+  @media screen and (min-width: 1920px) and (max-width: 2304px) {
+    .ml-15pt {
+      margin-left: 22.5%;
+    }
+    .mr-15pt {
+      margin-right: 24.5%;
+    }
+    .content-cddh-ct {
+      margin-left: 17.9% !important;
+    }
+    .content-ltcd {
+      margin-right: 37%;
+      padding: 0 12px 0 2px;
+    }
+    .banner-cd-pvm {
+      height: 308px !important;
+    }
+    .wrapper-anh-video-pvm {
+      margin-right: 0.7%;
+    }
+    .profile-left-pct {
+      padding-top: 6%;
     }
   }
   @media screen and (min-width: 2305px) {
     .ml-15pt {
-      margin-left: 35%;
+      margin-left: 36%;
     }
     .mr-15pt {
-      margin-right: 37%;
+      margin-right: 37.5%;
     }
     .content-cddh-ct {
       margin-left: 27% !important;
