--- a/TrangChu/home-tinnoibat-tinmoi_fix.html
+++ b/TrangChu/home-tinnoibat-tinmoi_fix.html
@@ -51,7 +51,7 @@
                         </#list>
                     </#if>
                 </div>
-                <div class="col-12 col-md-6 mb-md-4 mb-lg-0 row m-0 p-0">
+                <div class="col-12 col-md-6 mb-md-4 mb-lg-0 row m-0 p-0 news-second-tm">
                     <#assign indexLocal = 1/>
                     <#if entries?has_content>
                         <#list entries as curEntry>
@@ -375,6 +375,21 @@
         #img-main {
             height: fit-content;
         }
+    }
+    @media screen and (min-width: 768px) and (max-width: 1024px) {
+        .news-second-tm{
+            max-width: 100%;
+            flex: 0 0 100%;
+        }
+    }
+    
+    .text-4dong > p > strong {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18.2px;
+        letter-spacing: 0.005em;
+        text-align: left;
+        color: #2E2E2E;
     }
     
 </style>
